force-app/main/default/objects/Formulario_MarketingCloud__c/Formulario_MarketingCloud__c.object-meta.xml
<CustomObject>
    <label>Formularios Marketing Cloud</label>
    <nameField>
        <displayFormat>MC-{000000}</displayFormat>
        <label>Nombre del Formulario Marketing Cloud</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Formularios MarketingCloud</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>