force-app/main/default/objects/Formulario_MarketingCloud__c/fields/A_cu_l_de_los_prod_le_adicion_s_algo_m_s__c.field-meta.xml
<CustomField>
    <fullName>A_cu_l_de_los_prod_le_adicion_s_algo_m_s__c</fullName>
    <inlineHelpText>¿A cuál de los productos nombrados le adicionas algo más, por ejemplo, MCT o aceite?</inlineHelpText>
    <label>A cuál le adicionás algo?(ej:MCT,aceite)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>