force-app/main/default/objects/Formulario_MarketingCloud__c/fields/A_que_producto_se_cambio__c.field-meta.xml
<CustomField>
    <fullName>A_que_producto_se_cambio__c</fullName>
    <label>A que producto se cambio?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ensure</fullName>
            </value>
            <value>
                <fullName>Ensure advance</fullName>
            </value>
            <value>
                <fullName>Ensure clinical</fullName>
            </value>
            <value>
                <fullName>Ensure plus</fullName>
            </value>
            <value>
                <fullName>Boost senior drink</fullName>
            </value>
            <value>
                <fullName>Boost senior polvo/Boost 1.5</fullName>
            </value>
            <value>
                <fullName>Supportan drink</fullName>
            </value>
            <value>
                <fullName>Fresubin 3.2kcal</fullName>
            </value>
            <value>
                <fullName>Fresubin creme</fullName>
            </value>
            <value>
                <fullName>Fortisip Max</fullName>
            </value>
            <value>
                <fullName>Diasip/Diben</fullName>
            </value>
            <value>
                <fullName>Fortisip Vainilla</fullName>
            </value>
            <value>
                <fullName>Fortisip Compact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>