force-app/main/default/objects/Formulario_MarketingCloud__c/fields/A_trav_s_de_qu_medio_recibe_los_alime__c.field-meta.xml
<CustomField>
    <fullName>A_trav_s_de_qu_medio_recibe_los_alime__c</fullName>
    <label>A través de qué medio recibe los alime</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Farmacia</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Recibe en la casa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>