force-app/main/default/objects/Formulario_MarketingCloud__c/fields/A_trav_s_de_que_canal__c.field-meta.xml
<CustomField>
    <fullName>A_trav_s_de_que_canal__c</fullName>
    <label>¿Que canal hace la entrega de provisión?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Farmacia</fullName>
            </value>
            <value>
                <fullName>Best Care</fullName>
            </value>
            <value>
                <fullName>Otra Empresa de internación domiciliaria</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>