force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Actividades_o_servicios_para_esta_etapa__c.field-meta.xml
<CustomField>
    <fullName>Actividades_o_servicios_para_esta_etapa__c</fullName>
    <inlineHelpText>¿Qué actividades o servicios podríamos ofrecerte para esta etapa del tratamiento?</inlineHelpText>
    <label>Actividades o servicios para esta etapa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Talleres de cocina</fullName>
            </value>
            <value>
                <fullName>Materiales</fullName>
            </value>
            <value>
                <fullName>Talleres interactivos</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>