force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Ademas_de_Neocate_se_le_dio_otra_formula__c.field-meta.xml
<CustomField>
    <fullName>Ademas_de_Neocate_se_le_dio_otra_formula__c</fullName>
    <label>Ademas de Neocate,se le dio otra formula</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>