force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Adherencia_esta_relacionado_con__c.field-meta.xml
<CustomField>
    <fullName>Adherencia_esta_relacionado_con__c</fullName>
    <description>Su inconveniente con la adherencia está relacionado con que:</description>
    <inlineHelpText>Su inconveniente con la adherencia está relacionado con que:</inlineHelpText>
    <label>Adherencia esta relacionado con</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No tolera la formula (No tolera)</fullName>
            </value>
            <value>
                <fullName>No quiere seguir con el tratamiento (Se rehusa)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>