force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Adherencia_mensual_a_la_SNO__c.field-meta.xml
<CustomField>
    <fullName>Adherencia_mensual_a_la_SNO__c</fullName>
    <label>% Adherencia mensual a la SNO</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>