force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Aditivos_hacen_que_no_sea_apetecible__c.field-meta.xml
<CustomField>
    <fullName>Aditivos_hacen_que_no_sea_apetecible__c</fullName>
    <inlineHelpText>Hay algún producto que, por agregarle aceite u otra opción, para alcanzar el ratio, te quede con feo olor o textura y por ese motivo no quieras consumirlo?</inlineHelpText>
    <label>¿Aditivos hacen que no sea apetecible?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No sabe</fullName>
            </value>
            <value>
                <fullName>No utilizo agregados</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>