force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Alteraci_n_en_la_capacidad_funcional__c.field-meta.xml
<CustomField>
    <fullName>Alteraci_n_en_la_capacidad_funcional__c</fullName>
    <label>¿Alteración en la capacidad funcional?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>