force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Apellido__c.field-meta.xml
<CustomField>
    <fullName>Apellido__c</fullName>
    <formula>Cuenta__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apellido</label>
    <type>Text</type>
</CustomField>