force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Aprox_Cu_ntas_veces_defeca_por_dia__c.field-meta.xml
<CustomField>
    <fullName>Aprox_Cu_ntas_veces_defeca_por_dia__c</fullName>
    <label>¿Aprox. cuántas veces defeca por dia?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 vez por día</fullName>
            </value>
            <value>
                <fullName>2-3 veces por día</fullName>
            </value>
            <value>
                <fullName>Cada dos días</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>