force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Area_Terapeutica__c.field-meta.xml
<CustomField>
    <fullName>Area_Terapeutica__c</fullName>
    <formula>TEXT(Cuenta__r.Area_terapeutica__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area Terapeutica</label>
    <type>Text</type>
</CustomField>