force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Barreras_para_la_continuidad_del_trat__c.field-meta.xml
<CustomField>
    <fullName>Barreras_para_la_continuidad_del_trat__c</fullName>
    <description>¿Qué barreras encuentra en la continuidad del tratamiento?</description>
    <inlineHelpText>¿Qué barreras encuentra en la continuidad del tratamiento?</inlineHelpText>
    <label>Barreras para la continuidad del trat.</label>
    <type>TextArea</type>
</CustomField>