force-app/main/default/objects/Formulario_MarketingCloud__c/fields/C_ando_la_presentar__c.field-meta.xml
<CustomField>
    <fullName>C_ando_la_presentar__c</fullName>
    <label>¿Cúando la presentará?</label>
    <type>Date</type>
</CustomField>