force-app/main/default/objects/Formulario_MarketingCloud__c/fields/C_mo_la_toler__c.field-meta.xml
<CustomField>
    <fullName>C_mo_la_toler__c</fullName>
    <label>¿Cómo la toleró?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>La toleró bien</fullName>
            </value>
            <value>
                <fullName>Presentó dificultades</fullName>
            </value>
            <value>
                <fullName>No la toleró</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>