force-app/main/default/objects/Formulario_MarketingCloud__c/fields/C_mo_le_fue_en_el_primer_mes_de_trat__c.field-meta.xml
<CustomField>
    <fullName>C_mo_le_fue_en_el_primer_mes_de_trat__c</fullName>
    <label>¿Cómo le fue en el primer mes de trat.?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Noté mejoras</fullName>
            </value>
            <value>
                <fullName>No pude iniciar el tratamiento</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>