force-app/main/default/objects/Formulario_MarketingCloud__c/fields/C_mo_lo_conserva__c.field-meta.xml
<CustomField>
    <fullName>C_mo_lo_conserva__c</fullName>
    <label>¿Cómo lo conserva?</label>
    <type>TextArea</type>
</CustomField>