force-app/main/default/objects/Formulario_MarketingCloud__c/fields/C_mo_lo_est_consumiendo__c.field-meta.xml
<CustomField>
    <fullName>C_mo_lo_est_consumiendo__c</fullName>
    <label>¿Cómo lo está consumiendo?</label>
    <type>TextArea</type>
</CustomField>