force-app/main/default/objects/Formulario_MarketingCloud__c/fields/C_mo_lo_prepara__c.field-meta.xml
<CustomField>
    <fullName>C_mo_lo_prepara__c</fullName>
    <label>¿Cómo lo prepara?</label>
    <type>TextArea</type>
</CustomField>