force-app/main/default/objects/Formulario_MarketingCloud__c/fields/C_mo_lo_usaste__c.field-meta.xml
<CustomField>
    <fullName>C_mo_lo_usaste__c</fullName>
    <label>Cómo lo usaste?</label>
    <type>TextArea</type>
</CustomField>