force-app/main/default/objects/Formulario_MarketingCloud__c/fields/C_mo_sostiene_el_tratamiento__c.field-meta.xml
<CustomField>
    <fullName>C_mo_sostiene_el_tratamiento__c</fullName>
    <label>¿Cómo sostiene el tratamiento?</label>
    <length>90</length>
    <type>Text</type>
</CustomField>