force-app/main/default/objects/Formulario_MarketingCloud__c/fields/C_mo_toler_el_GMPro__c.field-meta.xml
<CustomField>
    <fullName>C_mo_toler_el_GMPro__c</fullName>
    <label>¿Cómo toleró el GMPro?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lo pude tolerar bien</fullName>
            </value>
            <value>
                <fullName>No lo pude tolerar</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>