force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Calor_as_que_consume__c.field-meta.xml
<CustomField>
    <fullName>Calor_as_que_consume__c</fullName>
    <label>Calorías que consume</label>
    <type>TextArea</type>
</CustomField>