force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cambios_desde_el_inicio_de_la_dieta__c.field-meta.xml
<CustomField>
    <fullName>Cambios_desde_el_inicio_de_la_dieta__c</fullName>
    <inlineHelpText>¿Notás algún cambio desde el inicio de la dieta cetogenica?</inlineHelpText>
    <label>Cambios desde el inicio de la dieta</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>