force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cambios_en_el_peso__c.field-meta.xml
<CustomField>
    <fullName>Cambios_en_el_peso__c</fullName>
    <label>Cambios en el peso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sin cambios en el peso</fullName>
            </value>
            <value>
                <fullName>Aumento de peso</fullName>
            </value>
            <value>
                <fullName>Pérdida de peso involuntaria menor del 5%</fullName>
            </value>
            <value>
                <fullName>Pérdida de peso involuntaria mayor o igual del 5%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>