force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Canales_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Canales_de_Venta__c</fullName>
    <label>Canales de Venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Farmacity</fullName>
            </value>
            <value>
                <fullName>Dr. Ahorro</fullName>
            </value>
            <value>
                <fullName>Farmacia Azul</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>