force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Categoria_IMC__c.field-meta.xml
<CustomField>
    <fullName>Categoria_IMC__c</fullName>
    <label>Categoria IMC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bajo-peso</fullName>
            </value>
            <value>
                <fullName>Normo-peso</fullName>
            </value>
            <value>
                <fullName>Sobre-peso</fullName>
            </value>
            <value>
                <fullName>Obesidad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>