force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cert_Discapacidad__c.field-meta.xml
<CustomField>
    <fullName>Cert_Discapacidad__c</fullName>
    <inlineHelpText>¿Cuenta con certificado de discapacidad?</inlineHelpText>
    <label>Cert Discapacidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>