force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Clasificaci_n_seg_n_CIE_10__c.field-meta.xml
<CustomField>
    <fullName>Clasificaci_n_seg_n_CIE_10__c</fullName>
    <label>Clasificación según CIE-10</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tumores del gastrointestinal superior y glándulas anexas</fullName>
            </value>
            <value>
                <fullName>Tumor de mama</fullName>
            </value>
            <value>
                <fullName>Tumor cabeza y cuello</fullName>
            </value>
            <value>
                <fullName>Tumor de  órganos genitales femeninos (útero, ovario, vagina)</fullName>
            </value>
            <value>
                <fullName>Tumor de pulmón</fullName>
            </value>
            <value>
                <fullName>Tumor colon-recto</fullName>
            </value>
            <value>
                <fullName>Tumor de vías urinarias (riñón, vejiga)</fullName>
            </value>
            <value>
                <fullName>Tumor de órganos genitales masculinos (testículo, próstata, pene)</fullName>
            </value>
            <value>
                <fullName>Tumor del tejido linfático y órganos hematopoyéticos (leucemias, linfomas, mieloma múltiple)</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>