force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cobertura_de_salud__c.field-meta.xml
<CustomField>
    <fullName>Cobertura_de_salud__c</fullName>
    <label>Cobertura de salud</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sin cobertura de salud</fullName>
            </value>
            <value>
                <fullName>Prepaga</fullName>
            </value>
            <value>
                <fullName>Obra social sindical</fullName>
            </value>
            <value>
                <fullName>PAMI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>