force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Cobertura_y_Adherencia__c.field-meta.xml
<CustomField>
    <fullName>Cobertura_y_Adherencia__c</fullName>
    <inlineHelpText>Si no está con tratamiento, se aperturan las siguientes opciones, de las cuales debe el operador seleccionar la que corresponda:</inlineHelpText>
    <label>Cobertura y Adherencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adherencia</fullName>
            </value>
            <value>
                <fullName>Cobertura</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>