force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Combina_formato_en_lata_con_formato_para__c.field-meta.xml
<CustomField>
    <fullName>Combina_formato_en_lata_con_formato_para__c</fullName>
    <label>Combina lata con formato para llevar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>A veces</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>