force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Comentarios_adicionales__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_adicionales__c</fullName>
    <label>Comentarios adicionales</label>
    <type>TextArea</type>
</CustomField>