force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Comentarios_de__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_de__c</fullName>
    <label>Comentarios de indicacion</label>
    <type>TextArea</type>
</CustomField>