force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Comentarios_de_adherencia__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_de_adherencia__c</fullName>
    <label>Comentarios de adherencia</label>
    <type>TextArea</type>
</CustomField>