force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Comentarios_generales1__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_generales1__c</fullName>
    <inlineHelpText>Si la respuesta a &quot;La OS le cubre la formula?&quot; fue &quot;Aun no lo presente&quot;, contestar esta pregunta</inlineHelpText>
    <label>Comentarios generales</label>
    <length>40</length>
    <type>Text</type>
</CustomField>