force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Comentarios_generales3__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_generales3__c</fullName>
    <label>Comentarios generales</label>
    <length>40</length>
    <type>Text</type>
</CustomField>