force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Comentarios_generales_de_la_sucursal__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_generales_de_la_sucursal__c</fullName>
    <label>Comentarios generales de la sucursal</label>
    <length>250</length>
    <type>Text</type>
</CustomField>