force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Comentarios_Otro__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_Otro__c</fullName>
    <label>Comentarios Otro</label>
    <type>TextArea</type>
</CustomField>