force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Comentarios_sobre_la_farmacia__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_sobre_la_farmacia__c</fullName>
    <label>Comentarios sobre la farmacia</label>
    <length>250</length>
    <type>Text</type>
</CustomField>