force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Comenz_a_usar_GMPro__c.field-meta.xml
<CustomField>
    <fullName>Comenz_a_usar_GMPro__c</fullName>
    <label>¿Comenzó a usar GMPro?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>