force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Como_adquiere_el_apoyo_nutricional__c.field-meta.xml
<CustomField>
    <fullName>Como_adquiere_el_apoyo_nutricional__c</fullName>
    <inlineHelpText>Sólo para las respuestas &quot;SI&quot; de &quot;Va a continuar con el apoyo nutricional&quot;</inlineHelpText>
    <label>Como adquiere el apoyo nutricional?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Va_a_continuar_el_apoyo_nutricional__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compra Particular</fullName>
            </value>
            <value>
                <fullName>Le autoriza obra social</fullName>
            </value>
            <value>
                <fullName>Aún no compro</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>