force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Como_adquiere_el_producto__c.field-meta.xml
<CustomField>
    <fullName>Como_adquiere_el_producto__c</fullName>
    <label>Como adquiere el producto?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Farmacia</fullName>
            </value>
            <value>
                <fullName>Me lo envia la obra social</fullName>
            </value>
            <value>
                <fullName>Por internet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>