force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Como_har_el_tratamiento__c.field-meta.xml
<CustomField>
    <fullName>Como_har_el_tratamiento__c</fullName>
    <label>Como hará el tratamiento?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ambulatorio</fullName>
            </value>
            <value>
                <fullName>Intern. Domiciliaria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>