force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Como_la_van_a_iniciar__c.field-meta.xml
<CustomField>
    <fullName>Como_la_van_a_iniciar__c</fullName>
    <label>¿Cómo la van a iniciar?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internación</fullName>
            </value>
            <value>
                <fullName>ambulatorio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>