force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Como_le_indicaron_que_debe_consumir_el_p__c.field-meta.xml
<CustomField>
    <fullName>Como_le_indicaron_que_debe_consumir_el_p__c</fullName>
    <inlineHelpText>Como le indicaron que debe consumir el producto?</inlineHelpText>
    <label>Como le indicaron que lo consuma?</label>
    <type>TextArea</type>
</CustomField>