force-app/main/default/objects/Formulario_MarketingCloud__c/fields/Como_lo_consumen__c.field-meta.xml
<CustomField>
    <fullName>Como_lo_consumen__c</fullName>
    <label>¿Como lo consumen?</label>
    <type>TextArea</type>
</CustomField>